fix anonymous user generating a profile and then making in account to save the profile while it is generating and come back later. added tests for task logic, e2e test for views and integrations tests for tasks, set up CI

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -24,7 +24,7 @@
             <div class="mt-6">
                 <button
                     @click="instructionsOpen = true"
-                    class="bg-brand-pink text-brand-text border-brand-text shadow-neo text-md cursor-pointer border-2 px-1 font-bold transition-all duration-150 ease-in-out hover:shadow-none active:translate-x-1 active:translate-y-1"
+                    class="bg-brand-pink text-brand-text border-brand-text shadow-neo cursor-pointer border-2 px-1 text-lg font-bold transition-all duration-150 ease-in-out hover:shadow-none active:translate-x-1 active:translate-y-1"
                 >
                     Instructions
                 </button>
