--- a/core/templates/core/task_status.html
+++ b/core/templates/core/task_status.html
@@ -50,7 +50,7 @@
                 </p>
                 <a
                     href="{% url 'core:signup' %}?task_id={{ task_id }}"
-                    class="shadow-neo hover:shadow-neo-inset border-brand-text bg-brand-yellow mt-4 inline-block border-2 px-6 py-2 font-bold transition-shadow"
+                    class="shadow-neo hover:shadow-neo-inset border-brand-text bg-brand-green mt-4 inline-block border-2 px-3 py-2 font-bold transition-shadow"
                 >
                     Sign Up & Save My DNA
                 </a>
