--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -83,7 +83,7 @@
                             </p>
                             
                             <div x-show="fileName" x-transition class="relative  max-w-md">
-                                <div class="shadow-neo border-brand-text border-2 bg-brand-yellow px-8 py-2">
+                                <div class="shadow-neo border-brand-text border-2 bg-brand-yellow text-sm md:text-md px-6 py-2">
                                     <p class="text-brand-text truncate text-xl font-bold" x-text="fileName"></p>
                                 </div>
 
